// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingRow renders correctly with highlight 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
  background-color: #009688;
  color: #fff;
}

.c0 svg {
  width: 1.125rem;
  height: 1.125rem;
  margin-right: 0.25rem;
}

<div
  class="c0 c1"
>
  
</div>
`;

exports[`HeadingRow renders correctly without highlight 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
}

<div
  class="c0 c1"
>
  
</div>
`;
